--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "@vscode/test-web": "^0.0.26",
     "assert": "^2.0.0",
     "eslint": "^8.18.0",
+    "fs": "^0.0.1-security",
     "mocha": "^10.0.0",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
@@ -48,6 +51,7 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "element-plus": "*"
+    "element-plus": "*",
+    "vscode-webview-tool": "^1.0.4"
   }
 }
